fix nav overflow, removing padding on side of text

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -527,19 +527,18 @@ main ul {
     nav li{
         text-align: center;
         place-self: center stretch;
-        padding: 30px;
+        padding-top: 30px;
+        padding-bottom: 30px;
         border-right: 1px solid white;
         border-bottom: none;
-        text-overflow:ellipsis;
         white-space: nowrap;
         overflow:hidden;
     }
 
-    nav li .active{
+    nav li .active {
         background-color: #2D3F4E;
     }
  
-
     nav img {
         width: 7em;
     }
